argocd/infra/storage/rclone/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rclone
  labels:
    app: rclone
spec:
  replicas: 1
  serviceName: rclone
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rclone
  template:
    metadata:
      labels:
        app: rclone
    spec:
      containers:
        - name: rclone
          imagePullPolicy: IfNotPresent
          image: harbor.yanello.net/docker/rclone/rclone:1.75.1@sha256:45401ad7410db1d67ffdb58e19059ad20b0d8e0285a60e38bbec55cc1019c7a5
          args:
            - rcd
            - --rc-web-gui
            - --rc-web-gui-no-open-browser
            - --rc-addr=:5572
            - --rc-htpasswd=/config/rclone/htpasswd
          ports:
            - containerPort: 5572
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config/rclone
              name: config
          resources:
            requests:
              cpu: 150m
              memory: 1Gi
            limits:
              memory: 1280Mi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 1Gi
