argocd/infra/storage/rclone/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rclone
  name: rclone
spec:
  ports:
    - name: http
      port: 5572
      targetPort: http
  selector:
    app: rclone
