argocd/infra/storage/rclone/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rclone-gui
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - rclone.yanello.net
  rules:
    - backendRefs:
        - name: rclone
          port: 5572
