argocd/infra/storage/rclone/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rclone
spec:
  endpointSelector:
    matchLabels:
      app: rclone
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "5572"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "445"
              protocol: TCP
            - port: "2049"
              protocol: TCP
